# KCWI_DRP

./: .gitignore  .readthedocs.yml  .travis.yml  CODEOWNERS  LICENSE.rst  README.rst  README.txt  changelog.txt  config.cfg  constraints.txt  environment.yml  instr.cfg  kcwi.cfg  requirements.txt  setup.cfg  setup.py
conda_build_files/: build.sh  meta.yaml
docs/: data_products.csv  requirements.txt
docs/source/: api.rst  building.rst  conf.py  configuration.rst  data_products.rst  development.rst  help.rst  index.rst  installing.rst  issues.rst  pipeline_concepts.rst  quickstart.rst  running.rst  sky_subtraction.rst  start_up.rst  updating_docs.rst  versions.rst
graphs/: wavelengthtest.py
kcwidrp/: logger.py  pytest.ini
kcwidrp/_shared/: utils.py
kcwidrp/configs/: framework.cfg  framework_logger.cfg  kcwi.cfg  kcwi_koarti.cfg  logger.cfg  rti.cfg
kcwidrp/core/: bokeh_plotting.py  geometric.py  kcwi_correct_extin.py  kcwi_get_std.py  kcwi_plotting.py  kcwi_proctab.py  notify_api.py  notify_complete.py
kcwidrp/data/: Untitled.ipynb
kcwidrp/pipelines/: kcwi_pipeline.py  keck_rti_pipeline.py
kcwidrp/primitives/: AirToVacConversion.py  ApplyFlat.py  ArcOffsets.py  BarycentricCorrection.py  CalcPrelimDisp.py  CorrectDar.py  CorrectDefects.py  CorrectGain.py  CorrectIllumination.py  CreateUncertaintyImage.py  CubeImage.py  ExtractArcs.py  FindBars.py  FitCenter.py  FlagSaturation.py  FluxCalibrate.py  GenerateMaps.py  GenerateQL.py  GetAtlasLines.py  MakeCube.py  MakeInvsens.py  MakeMasterArc.py  MakeMasterBias.py  (+37 more)
scripts/: reduce.py  reduce_kcwi.py
(+37 files in other folders)
