[metadata]
name = kcwidrp
version = 0.0dev
author = J. Neill, L. Rizzi, M. Brodheim
author_email = neill@srl.caltech.edu
description = KCWI Data Reduction Pipeline
long_description =
license = BSD 3-Clause
url = https://github.com/Keck-DataReductionPipelines/KCWI_DRP.git
edit_on_github = False
github_project = Keck-DataReductionPipelines/KCWI_DRP
# python_requires = ">=3.6"

[options]
# install_requires = "ccdproc,bokeh,numpy,scipy,astropy"  This does not work!
zip_safe = False
use_2to3 = False

[aliases]
test=pytest

