[metadata]
name = kcwidrp
version = 1.1.0
author = J. Neill, L. Rizzi, M. Brodheim
author_email = neill@srl.caltech.edu
description = KCWI Data Reduction Pipeline
long_description =
license = BSD 3-Clause
url = https://github.com/Keck-DataReductionPipelines/KCWI_DRP.git
edit_on_github = False
github_project = Keck-DataReductionPipelines/KCWI_DRP

[options]
zip_safe = False
use_2to3 = False

[aliases]
test=pytest

